* 2016.11.11 - added OpenCV package for Android

* 2016.11.09 - added boost lib package targeting Android

* 2016.08.08 - added GIT revision detection to packages

* 2016.06.21 - moved used math libs from other repos here
