@@ -1,0 +1,21 @@
+{
+  "backup_data_uid": "4eccbf8c03375f15",
+  "backup_module_uid": "1dc07ee0f4742028",
+  "backup_module_uoa": "package",
+  "control": {
+    "author": "Anton Lokhmotov",
+    "author_email": "anton@dividiti.com",
+    "author_webpage": "http://dividiti.com",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2016-11-10T18:41:42.189771",
+    "license": "See CK LICENSE.txt for licensing details",
+    "version": [
+      "1",
+      "8",
+      "3",
+      "2"
+    ]
+  },
+  "data_name": "lib-openblas-trunk-android"
+}
