@@ -1,0 +1,46 @@
+{
+  "customize": {
+    "extra_dir": "",
+    "git_src_dir": "src",
+    "install_env": {
+      "PACKAGE_URL": "https://github.com/xianyi/OpenBLAS"
+    },
+    "use_git_revision": "yes",
+    "version": "development"
+  },
+  "deps": {
+    "boost": {
+      "local": "yes",
+      "name": "Boost C++ libraries",
+      "sort": 5,
+      "tags": "lib,boost"
+    },
+    "c-compiler": {
+      "add_to_path": "yes",
+      "local": "yes",
+      "name": "C compiler",
+      "sort": 10,
+      "tags": "compiler,lang-c"
+    }
+  },
+  "end_full_path": {
+    "android": "install/lib/libopenblas.a"
+  },
+  "need_cpu_info": "yes",
+  "only_for_host_os_tags": [
+    "linux"
+  ],
+  "only_for_target_os_tags": [
+    "android"
+  ],
+  "process_script": "install",
+  "soft_uoa": "252d8364ec25497b",
+  "suggested_path": "lib-openblas",
+  "tags": [
+    "lib",
+    "blas",
+    "cblas",
+    "openblas",
+    "vtrunk"
+  ]
+}
