@@ -1,0 +1,1 @@
+Parts used from https://github.com/sh1r0/caffe-android-lib
