@@ -1,4 +1,5 @@
 * 2016.11.11 - added OpenCV package for Android
+             - added OpenBLAS package for Android
 
 * 2016.11.09 - added boost lib package targeting Android
 
